# sudodev

./: .gitignore  CMakeLists.txt  Changes  INSTALL  README.md  TODO  build.sh  clean.sh  install.sh
init/: CMakeLists.txt  README.txt  init.cmake
init/bsd/: rc.sudodevd
init/systemd/: sudodevd.service
init/sysv/: sudodevd
init/upstart/: sudodevd.conf
src/: CMakeLists.txt  assert.h  chomp.c  chomp.h  color.c  color.h  config.h  daemonize.c  daemonize.h  devs.c  devs.h  find.c  find.h  group.c  group.h  lockfile.c  lockfile.h  profile.c  profile.h  readfile.c  readfile.h  say.c  say.h  sort.c  sort.h  sudodev.c  sudodevd.c  sudoers.c  sudoers.h
